[project]
name = "crewai-tool-topic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shiraz Ali", email = "shirazkk8@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
crewai-tool-topic = "crewai_tool_topic:main"
cricket = "crewai_tool_topic.main:kickoff"
img = "crewai_tool_topic.main2:kickoff"
custom_tool = "crewai_tool_topic.main3:kickoff"
pass_tool = "crewai_tool_topic.main4:kickoff"
prime_number = "crewai_tool_topic.main5:kickoff"
process = "crewai_tool_topic.crew_process:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
