[project]
name = "crewai-tool-topic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shiraz Ali", email = "shirazkk8@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "composio-crewai>=0.7.5",
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "google-generativeai>=0.8.4",
    "minds-sdk>=1.0.4",
]

[project.scripts]
crewai-tool-topic = "crewai_tool_topic:main"
cricket = "crewai_tool_topic.main:kickoff"
orch = "crewai_tool_topic.main2:kickoff"
custom_tool = "crewai_tool_topic.main3:kickoff"
pass_tool = "crewai_tool_topic.main4:kickoff"
prime_number = "crewai_tool_topic.main5:kickoff"
process = "crewai_tool_topic.crew_process:kickoff"

code_doc = "crewai_all_tools.code_docs_rag_search:kickoff"
code_int = "crewai_all_tools.code_Interpreter:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
